[tool.poetry]
name = "europy"
version = "0.1.0"
description = "Utility to do tree search on imports in python and compose to a jupyter ipynb file"
authors = ["John (Sinjhin) Gardner <john@ardea.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nbformat = "^5.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
